--- a/package.json
+++ b/package.json
@@ -6,14 +6,35 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "^18.2.7",
+    "@angular/compiler": "^18.2.7",
+    "@angular/core": "^18.2.7",
+    "@angular/forms": "^18.2.7",
+    "@angular/platform-browser": "^18.2.7",
+    "@angular/platform-browser-dynamic": "^18.2.7",
+    "@angular/router": "^18.2.7",
+    "@angular/upgrade": "^18.2.7",
     "angular": "1.8.x",
     "angular-animate": "1.8.x",
     "angular-resource": "1.8.x",
     "angular-route": "1.8.x",
     "bootstrap": "3.3.x",
-    "jquery": "3.3.x"
+    "jquery": "3.3.x",
+    "rxjs": "^7.8.1",
+    "systemjs-plugin-babel": "^0.0.25",
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
+    "@types/angular": "^1.8.9",
+    "@types/angular-animate": "^1.5.14",
+    "@types/angular-aria": "^1.7.5",
+    "@types/angular-cookies": "^1.8.4",
+    "@types/angular-mocks": "^1.7.4",
+    "@types/angular-resource": "^1.5.20",
+    "@types/angular-route": "^1.7.6",
+    "@types/angular-sanitize": "^1.8.4",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.7.4",
     "angular-mocks": "1.8.x",
     "cpx": "^1.5.0",
     "http-server": "^0.11.1",
@@ -22,15 +43,18 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
-    "protractor": "^5.4.4"
+    "protractor": "^5.4.4",
+    "typescript": "^5.6.2"
   },
   "scripts": {
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
     "postinstall": "npm run copy-libs",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" app/lib -C",
     "prestart": "npm install",
-    "start": "http-server ./app -a localhost -p 8000 -c-1",
+    "start": "http-server ./ -a localhost -p 8000 -c-1",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "npm test -- --single-run",
